--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,13 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".ui.MoviesDetailUpcomingActivity"></activity>
-        <activity android:name=".ui.MoviesDetailPopularActivity" />
-        <activity android:name=".ui.MainActivity">
+        <activity android:name=".ui.login.DashboardActivity"></activity>
+        <activity android:name=".ui.login.RegistrationActivity" />
+        <activity android:name=".ui.login.LoginActivity" />
+        <activity android:name=".ui.login.Main2Activity" />
+        <activity android:name=".ui.movies.MoviesDetailUpcomingActivity" />
+        <activity android:name=".ui.movies.MoviesDetailPopularActivity" />
+        <activity android:name=".ui.movies.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
