--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".ui.movies.NotInternetActivity"></activity>
         <activity android:name=".ui.login.RegistrationActivity" />
         <activity android:name=".ui.login.LoginActivity" />
         <activity android:name=".ui.movies.MoviesDetailUpcomingActivity" />
