--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,18 +13,22 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".ui.movies.NotInternetActivity"></activity>
+        <activity android:name=".ui.splash.SplashActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".ui.movies.MainActivity"></activity>
+
+        <activity android:name=".ui.movies.NotInternetActivity" />
         <activity android:name=".ui.login.RegistrationActivity" />
         <activity android:name=".ui.login.LoginActivity" />
         <activity android:name=".ui.movies.MoviesDetailUpcomingActivity" />
         <activity android:name=".ui.movies.MoviesDetailPopularActivity" />
-        <activity android:name=".ui.movies.MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+
     </application>
 
 </manifest>
